# bank_app_core

./: .gitignore  Dockerfile  alembic.ini  api.py  create_tables.py  docker-compose.yaml  e2e_tests.py  exceptions.py  handler.py  orm.py  pyproject.toml  set_db.ps1  utils.py  validations_models.py
.github/workflows/: tests.yaml
alembic/: env.py
alembic/versions/: 2026_01_01_2142-5125bcb0d5c2_fresh_schema.py  2026_01_26_2140-3cebcaa250c8_add_password_to_users.py  2026_01_26_2143-8f8f2b1a3c77_make_password_not_null.py  2026_02_23_1747-5c06ab8fa3b2_update_transactions_fk_to_account_id.py  2026_02_23_1750-271ed22b972b_update_transactions_amount_to_numeric.py  2026_02_23_1757-e4bf3c17aa80_update_transactions.py  2026_02_23_1819-a840edc054c8_update_transactions_2.py  2026_02_23_1826-69deb54850a4_update_transactions_3.py  2026_02_23_1831-38bd310fc74d_fix_accounts_transactions.py  2026_02_23_1837-a8b7559b7890_fix_accounts_transactions.py  2026_02_23_1840-40180a3fe1c4_fix_accounts.py  2026_02_23_1951-15b18d82438b_add_active_to_account.py  2026_02_23_2016-3314d183d24c_add_closed_date_to_account.py  2026_02_23_2031-6cbd3ffa06ee_fix_account_id_to_in_transactions.py
api/: main.py  routes.py
api/routes/: account.py  transaction.py  user.py
api/schemas/: __init__.py  account_schemas.py  user_schemas.py
bank_app/: utils.py
bank_app/api/: main.py  routes.py
bank_app/api/schemas/: __init__.py  account_schemas.py  transaction_schemas.py
bank_app/application/: auth_service.py
bank_app/domain/entities/: __init__.py  (+3 more)
bank_app/infrastructure/: db.py  dependencies.py  uow.py
(+19 files in other folders)
