[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-app"
version = "0.1.0"
description = "FastAPI bank app"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "SQLAlchemy==2.0.45",
    "psycopg2-binary==2.9.11",
    "nanoid==2.0.0",
    "requests==2.32.5",
    "passlib",
    "pydantic[email]"

]


[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
]
