[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-app"
version = "0.1.0"
description = "FastAPI bank app"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "SQLAlchemy==2.0.45",
    "psycopg2-binary==2.9.11",
    "nanoid==2.0.0",
    "requests==2.32.5",
    "passlib",
    "pydantic[email]",
    "python-jose",
    "bcrypt < 4"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
]

# 🔴 TO JEST KLUCZOWA SEKCJA
[tool.setuptools.packages.find]
include = ["bank_app*"]

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
unsafe-fixes = false
preview = true
show-fixes = true
respect-gitignore = true

[tool.ruff.lint]
select = [
  "F",
  "E", "W",
  "B",
  "C4",
  "SIM",
  "RET",
  "ARG",
  "TCH",
  "RUF",
  "UP",
  "I",
  "PL",
  "PERF",
  "DTZ",
  "S",
]